[workspace]
members = [
    "flue-core",
    "flue-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Fast, Lightweight, Unified Engine for Text2Image Diffusion Models"
homepage = "https://github.com/Apsu/flue"
repository = "https://github.com/Apsu/flue"
keywords = ["machine-learning"]
categories = ["science"]
license = "MIT"

[workspace.dependencies]
accelerate-src = { version = "0.3.2" }
anyhow = "1.0.97"
axum = "0.8.3"
base64 = "0.22.1"
candle-core = { version = "0.8.4" }
candle-flash-attn = { version = "0.8.4" } # For flash attention support, requires CUDA or Accelerate
candle-nn = { version = "0.8.4" }
candle-transformers = { version = "0.8.4" }
clap = { version = "4.5.34", features = ["derive"] }
hf-hub = { version = "0.4.2", default-features = false, features = ["ureq", "tokio", "rustls-tls"] }
image = "0.25.6"
intel-mkl-src = { version = "0.8.1" }
safetensors = "0.5.3"
serde = "1.0.219"
serde_json = "1.0.140"
tokenizers = { version = "0.21.1", features = ["hf-hub"] }
tokio = "1.44.1"
serde_plain = "1.0.2"
