[package]
name = "flue-core"
readme = "README.md"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
accelerate-src = { workspace = true, optional = true }
anyhow = { workspace = true }
candle-core = { workspace = true }
flue-flash-attn = { workspace = true, optional = true }
flue-flash-attn-v3 = { workspace = true, optional = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
image = { workspace = true }
intel-mkl-src = { workspace = true, optional = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
serde_plain = { workspace = true }

[features]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
flash-attn = ["cuda", "flue-flash-attn"]
flash-attn-v3 = ["cuda", "flue-flash-attn-v3"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate", "dep:accelerate-src"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl", "dep:intel-mkl-src"]

