[package]
name = "flue-flash-attn-v3"
version = "0.8.0"
edition = "2021"

description = "Flash attention V3 layer for Flue!"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Apsu/flue"

[dependencies]
# TODO: Uncomment when candle 0.9.0-alpha.2 is pushed to crates.io
# candle-core = { version = "0.9.0-alpha.2", features = ["cuda"] }
candle-core = { git = "https://github.com/huggingface/candle", branch = "main", features = ["cuda"] }
half = { version = "2.3.1", features = ["num-traits"] }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
num_cpus = "1.15.0"
rayon = "1.7.0"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
# TODO: Uncomment when candle 0.9.0-alpha.2 is pushed to crates.io
# candle-nn = { version = "0.9.0-alpha.2", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle", branch = "main", features = ["cuda"] }
rstest = "0.23"
