[package]
name = "flue-server"
readme = "README.md"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
flue-core = { version = "0.1.0", path = "../flue-core" }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
hf-hub = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[features]
cuda = ["flue-core/cuda"]
cudnn = ["flue-core/cudnn"]
metal = ["flue-core/metal"]
flash-attn = ["cuda", "flue-core/flash-attn"]
accelerate = ["flue-core/accelerate"]
mkl = ["flue-core/mkl"]

